should fix the problem... need to justify content in the wrapper as space between. align-content wasn't the lick.

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 	  display: flex; /* or inline-flex */
 	  flex-direction: column; /* row | row-reverse | column | column-reverse */
 	  align-items: center; /* stretch | flex-start | flex-end | center | baseline | first baseline | last baseline | start | end | self-start | self-end + ... safe | unsafe */
-	  align-content: center; /* flex-start | flex-end | center | space-between | space-around | space-evenly | stretch | start | end | baseline | first baseline | last baseline + ... safe | unsafe */
+	  justify-content: space-between; /* flex-start | flex-end | center | space-between | space-around | space-evenly | stretch | start | end | baseline | first baseline | last baseline + ... safe | unsafe */
 	}
 
 	.heading {
@@ -22,7 +22,6 @@
 		flex-flow: column wrap;
 		justify-content: flex-end;
 		width: 300px;
-		min-height: 33vh;
     padding: 0;
     margin: 0;
     text-align: center;
@@ -39,6 +38,7 @@
 	button.fitted {
 	  width: 300px;
 	  max-width: 400px;
+		margin: 10px 0;
 	}
 
 	.conclusion {
